# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.h  BVH.h  Camera.h  Hittable.h  MeshLoader.h  Ray.h  Renderer.h  Sphere.h  Triangle.h  Vec3.h
src/: main.cpp
